[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/UI/SimpleMainMenu.gd" id="SimpleMainMenu_script"]

[node name="SimpleMainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("SimpleMainMenu_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.3, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "ğŸ› BUGS SHOOTING GAME ğŸ”«"
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Defend the Garden!"
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "ğŸ® PLAY GAME"
theme_override_font_sizes/font_size = 20

[node name="InstructionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "ğŸ“‹ INSTRUCTIONS"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "âŒ QUIT"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Instructions" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 150)
bbcode_enabled = true
text = "[center][b]HOW TO PLAY:[/b]

ğŸ•¹ï¸ WASD - Move around
ğŸ¯ Space/Click - Shoot bugs  
ğŸ› Kill bugs to score points
ğŸŒŠ Survive waves of enemies

[b]BUG TYPES:[/b]
ğŸ”´ Red - Normal bugs
ğŸ”µ Cyan - Fast zigzag bugs  
ğŸŸ¤ Dark Red - Tank bugs (3 hits)[/center]"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/InstructionsButton" to="." method="_on_instructions_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]